--- a/src/locale/messages/en-US.json
+++ b/src/locale/messages/en-US.json
@@ -1,14 +1,20 @@
 {
   "site": {
-    "title": "Next.js",
-    "desc": "Using Ant-Design 5 with Next.js 13 and Tailwind CSS"
+    "title": "Media Modify",
+    "desc": "Online audio and video media format conversion"
+  },
+  "tools": {
+    "image": "Image",
+    "audio": "Audio",
+    "video": "Video",
+    "file": "File"
   },
   "nav": {
-    "home": "Home"
+    "home": "Home",
+    "video": "Video"
   },
   "theme": {
     "light": "light",
-    "dark": "dark",
-    "system": "system"
+    "dark": "dark"
   }
 }
